syntax = "proto3";
package hbb;

message EncodedVideoFrame {
  bytes data = 1;
  bool key = 2;
  int64 pts = 3;
}

message EncodedVideoFrames { repeated EncodedVideoFrame frames = 1; }

message RGB { bool compress = 1; }

// planes data send directly in binary for better use arraybuffer on web
message YUV {
  bool compress = 1;
  int32 stride = 2;
}

message VideoFrame {
  oneof union {
    EncodedVideoFrames vp9s = 6;
    RGB rgb = 7;
    YUV yuv = 8;
    EncodedVideoFrames h264s = 10;
    EncodedVideoFrames h265s = 11;
  }
  int64 timestamp = 9;
}

message VideoCodecState {
  enum PerferCodec {
    Auto = 0;
    VPX = 1;
    H264 = 2;
    H265 = 3;
  }

  int32 score_vpx = 1;
  int32 score_h264 = 2;
  int32 score_h265 = 3;
  PerferCodec perfer = 4;
}

enum ImageQuality {
  NotSet = 0;
  Low = 2;
  Balanced = 3;
  Best = 4;
}

message DisplayInfo {
  sint32 x = 1;
  sint32 y = 2;
  int32 width = 3;
  int32 height = 4;
  string name = 5;
  bool online = 6;
}


message Message {
  oneof union {
    VideoFrame video_frame = 1;
  }
}
